# BidirectionalVoiceAgent

./: README.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
cdk/: README.md  cdk.json  package-lock.json  package.json
cdk/lib/: backend.ts
cli/: README.md  pyproject.toml
cli/app/: main.py
docs/: onboarding-instalator.md  onboarding-programista.md
